[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here_010101010"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
# работаете, меняете файлы